tests/snapshots/validator_snapshots__validator_all@validator-179.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_struct_init_missing_field_errors.of
---
ValidationErrors(
    [
        "missing field 'x' when initializing 'S' in function 'test_module::test'",
    ],
)
