tests/snapshots/validator_snapshots__validator_all@validator-180.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_unknown_member_errors.of
---
ValidationErrors(
    [
        "unknown member 'x' on 'struct#0' in function 'test_module::test'",
    ],
)
