tests/snapshots/validator_snapshots__validator_all@validator-181.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_unknown_variable_errors.of
---
ValidationErrors(
    [
        "unknown variable 'oops' in function 'test_module::test'",
    ],
)
