tests/snapshots/validator_snapshots__validator_all@validator-183.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/validator/p5_while_non_bool_cond_errors.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::test' (while condition): expected 'bool', found 'int64'",
    ],
)
