tests/snapshots/validator_snapshots__validator_all@validator-184.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_var_decl_type_init_mismatch_errors.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::test' (variable 'x'): expected 'int64', found 'string'",
    ],
)
