tests/snapshots/validator_snapshots__validator_all@validator-185.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/validator/p5_var_decl_with_annotation_and_init.of
---
Ok
