tests/snapshots/validator_snapshots__validator_all@validator-20.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/20_union_config_constraints.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::in_choices' (binary Eq): expected 'null', found 'string'",
        "type mismatch in function 'test_module::main' (call to check arg 0): expected 'struct#2', found 'null'",
        "module 'test_module' imports unknown module 'of:core'",
        "unknown type 'List' in module 'test_module'",
        "unknown type 'List' in module 'test_module'",
        "unknown type 'List' in module 'test_module'",
        "unknown type 'List' in module 'test_module'",
        "unknown type 'List' in module 'test_module'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
